--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "Listen": ":8100",
-    "GUID": "16778",
+    "GUID": "your_guid",
     "RoomsOnPage": 24,
     "Colors": [
         "lightpink",
